# qrng

./: .gitignore  CMakeLists.txt  Makefile  boot.c  example_output.txt  hello.c  laser.c  main.elf  main.hex  psuedocode.txt  qrng.c  qrng.d  qrng.i  qrng.s  serial_bang.c  serial_config.c  sim.c  trythis.c
cmake/: avr.cmake
docs/: atmega328p_ref.txt
examples/: serial_config.c
include/: mf_type.h
include/laser/: debug.h  interlock.h  interrupt.h  lcd.h  pins.h  rotary.h  serial.h  timer0.h  timer1.h
include/qrng/: interrupt.h  lock.h  serial.h  timer0.h  timer1.h  timer2.h
include/util/: debug.h  fence.h  interrupt.h  pins.h  serial.h  timer1.h
src/: hello.c  qrng.c
tests/: CMakeLists.txt  tst-common.h  tst-freq.c  tst-monte-3d.c
utilities/: CMakeLists.txt  bits.c  parse.c  serial_listen.c  tst-freq.c
utilities/include/util/: string.h
